# sql-query-debugger

./: Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: Dockerfile  app.py  environment.py
